# supabase-api

./: Cargo.toml  Shuttle.toml  index.html  index1.html  install.txt  k6_traffic.txt
src/: .env  forever_script.js  main.rs  script.js
